[package]
name = "chaos_lattice_blind_sig"
version = "0.1.0"
edition = "2021"

[dependencies]
rayon = "1.8"
sha2 = "0.10"
hkdf = "0.12"
aes-gcm = "0.10"
rand = "0.8"
thiserror = "1.0"
eframe = "0.27"
egui = "0.27"
egui_plot = "0.27"
crossbeam-channel = "0.5"
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
glam = "0.24"
